--- a/pokedex-react/package.json
+++ b/pokedex-react/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pokedex-react",
+  "homepage": "https://axelmusch.be/-collection/pok3dex/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
